--- a/plugin.xml
+++ b/plugin.xml
@@ -1,59 +1,41 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
 xmlns:android="http://schemas.android.com/apk/res/android"
-           id="cordova-plugin-firebase-analytics"
-      version="0.12.1">
+           id="cordova-plugin-firebase-crashlytics"
+      version="0.1.0">
 
-    <name>FirebaseAnalyticsPlugin</name>
-    <description>Cordova plugin for Firebase Analytics</description>
+    <name>FirebaseCrashlyticsPlugin</name>
+    <description>Cordova plugin for Firebase Crashlytics</description>
     <license>MIT</license>
     <keywords>cordova</keywords>
-    <repo>https://github.com/chemerisuk/cordova-plugin-firebase-analytics</repo>
-    <issue>https://github.com/chemerisuk/cordova-plugin-firebase-analytics/issues</issue>
+    <repo>https://github.com/FranciscoG/cordova-plugin-firebase-crashlytics</repo>
+    <issue>https://github.com/FranciscoG/cordova-plugin-firebase-crashlytics/issues</issue>
 
-    <js-module src="www/FirebaseAnalytics.js" name="FirebaseAnalytics">
-        <merges target="cordova.plugins.firebase.analytics" />
+    <hook type="after_plugin_install" src="hooks/after_plugin_add.js" />
+    <hook type="after_platform_add" src="hooks/after_plugin_add.js" />
+    <hook type="before_plugin_uninstall" src="hooks/before_plugin_rm.js" />
+    
+    <js-module src="www/FirebaseCrashlytics.js" name="FirebaseCrashlytics">
+        <merges target="cordova.plugins.firebase.crashlytics" />
     </js-module>
-
+    
     <engines>
         <engine name="cordova" version=">=6.0.0"/>
-        <engine name="cordova-android" version=">=6.0.0"/>
         <engine name="cordova-ios" version=">=4.3.0"/>
     </engines>
 
     <platform name="ios">
         <config-file target="config.xml" parent="/*">
-            <feature name="FirebaseAnalytics">
-                <param name="ios-package" value="FirebaseAnalyticsPlugin" />
+            <feature name="FirebaseCrashlytics">
+                <param name="ios-package" value="FirebaseCrashlyticsPlugin" />
                 <param name="onload" value="true" />
             </feature>
         </config-file>
 
-        <header-file src="src/ios/FirebaseAnalyticsPlugin.h" />
-        <source-file src="src/ios/FirebaseAnalyticsPlugin.m" />
+        <header-file src="src/ios/FirebaseCrashlyticsPlugin.h" />
+        <source-file src="src/ios/FirebaseCrashlyticsPlugin.m" />
 
-        <framework src="Firebase/Analytics" type="podspec" spec="~> 4.1"/>
-    </platform>
-
-    <platform name="android">
-        <preference name="FIREBASE_VERSION" default="11.0.+"/>
-
-        <config-file target="res/xml/config.xml" parent="/*">
-            <feature name="FirebaseAnalytics">
-                <param name="android-package" value="by.chemerisuk.cordova.firebase.FirebaseAnalyticsPlugin" />
-                <param name="onload" value="true" />
-            </feature>
-        </config-file>
-
-        <config-file target="AndroidManifest.xml" parent="/*">
-            <uses-permission android:name="android.permission.INTERNET" />
-        </config-file>
-
-        <dependency id="cordova-support-google-services" version="~1.0.0"/>
-
-        <framework src="com.google.firebase:firebase-core:$FIREBASE_VERSION" />
-
-        <source-file src="src/android/FirebaseAnalyticsPlugin.java"
-            target-dir="src/by/chemerisuk/cordova/firebase/" />
+        <framework src="Fabric" type="podspec" spec="~> 1.7.5"/>
+        <framework src="Crashlytics" type="podspec" spec="~> 3.10.1"/>
     </platform>
 
 </plugin>
